--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ Temp/temp.txt
 Config/HRAV_Keys.vbs
 Pages/Cache/RTP-cache1.dat
 Pages/Cache/RTP-cache2.dat
+Pages/Temp/systemp.txt
+Reports/c1b215c2d37e/06a995f21654/ScanCore_Report.txt
+Reports/c1b215c2d37e/1edb686a4033/ScanCore_Report.txt
+Reports/c1b215c2d37e/33f173f4d3ff/ScanCore_Report.txt
+Reports/c1b215c2d37e/6afa2416188b/ScanCore_Report.txt
+Reports/c1b215c2d37e/769f81727fc0/ScanCore_Report.txt
+Reports/c1b215c2d37e/5507bb3ba671/ScanCore_Report.txt
+Reports/c1b215c2d37e/e83724de1ee7/ScanCore_Report.txt
+Reports/c1b215c2d37e/ffe8407ef7b6/ScanCore_Report.txt
